name:                hr2lmp
version:             0.1.0.0
-- synopsis:         Examples and Exercises for: The Haskell Road to Logic, Math and Programming
-- description:
homepage:            https://github.com/yedivanseven/hr2lmp#readme
license:             BSD3
license-file:        LICENSE
author:              Georg Heimel
maintainer:          georg@muckisnspirit.com
copyright:           2017 Georg Heimel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hr2lmp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hr2lmp
  default-language:    Haskell2010

test-suite hr2lmp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hr2lmp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yedivanseven/hr2lmp
